added activites to be displayed

--- a/public/index.css
+++ b/public/index.css
@@ -47,5 +47,11 @@ a{
   margin: 10px;
   padding: 10px;
 }
+
+.activity-list {
+  border: 1px solid black;
+  margin: 10px;
+  padding: 10px;
+}
   
 
