--- a/public/index.css
+++ b/public/index.css
@@ -53,5 +53,30 @@ a{
   margin: 10px;
   padding: 10px;
 }
+
+.RegistrationForm{
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  padding: 5%;
+  font-size: 18px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Registration{
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  padding: 5%;
+  font-size: 20px;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+input{
+  margin: 5px;
+}
   
 
