added a home component. Made basic form for creating new routine.  Began working on the create new routine function.

--- a/public/index.css
+++ b/public/index.css
@@ -74,6 +74,17 @@ a{
   align-items: center;
   margin: 20px;
 }
+#create-routine{
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  padding: 5%;
+  font-size: 18px;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 
 input{
   margin: 5px;
