--- a/public/index.css
+++ b/public/index.css
@@ -4,11 +4,29 @@ body {
   height: 100vh;
   width: 100vw;
   margin: 0;
+  
+}
+
+#activity-button {
+text-align: center;
 }
 
 a{
   text-decoration: none;
   color: white;
+}
+
+h1 {
+  text-align: center;
+}
+h2 {
+  text-align: center;
+}
+
+#my-routines {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #navbar {
@@ -20,6 +38,12 @@ a{
   color: white;
   display: flex;
   align-items: center;
+}
+
+#routine-button {
+  width: 10rem;
+
+
 }
 
 
@@ -35,6 +59,7 @@ a{
   background-color: rgb(44, 67, 142);
   display: flex;
   justify-content: space-between;
+
 }
 
 .routes{
@@ -74,6 +99,18 @@ a{
   align-items: center;
   margin: 20px;
 }
+#create-activity{
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  padding: 5%;
+  font-size: 20px;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+
 #create-routine{
   border: 1px solid black;
   display: flex;
